@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Give access to find_string() to plugins. Fix invalid manual_apply parameter order.
+ include/sproto.h
+ server/plugins.c
+Nicolas Weeger 2008-05-12
+
 Detect correct prototype for strerror_r() courtesy Arvid Norlander.
  common/porting.c
  configure.ac
